# AmuletsArmor

./: CMakeLists.txt  README.md
cmake/: FindSDL2_net.cmake
include/amulets/: 3D_COLLI.h  3D_IO.h  3D_TRIG.h  3D_VIEW.h  ACTIVITY.h  AREASND.h  BANKUI.h  BANNER.h  BUTTON.h  CLIENT.h  CLI_RECV.h  CLI_SEND.h  CMDQUEUE.h  COLOR.h  COLORIZE.h  COMIO.h  COMWIN.h  CONFIG.h  CONTROL.h  CREDATA.h  CREDATAO.h  CRELOGIC.h  CSYNCPCK.h  DBLLINK.h  DEBUG.h  DITALK.h  DITALKP.h  DOOR.h  EFFECT.h  EFX.h  EQUIP.h  ESCMENU.h  FILE.h  FORM.h  GENBOR.h  GENERAL.h  GRAPHIC.h  GRAPHICS.h  GROUP.h  GUILDUI.h  (+75 more)
include/amulets/platform/: deserialization.h
src/: 3D_COLLI.c  3D_IO.c  3D_TRIG.c  3D_VIEW.c  ACTIVITY.c  AREASND.c  BANKUI.c  BANNER.c  BUTTON.c  CLIENT.c  CLI_RECV.c  CLI_SEND.c  CMDQUEUE.c  COLOR.c  COLORIZE.c  COMWIN.c  CONFIG.c  CONTROL.c  CRELOGIC.c  CSYNCPCK.c  DBLLINK.c  DEBUG.c  DEBUGBOR.c  DITALK.c  DOOR.c  EFFECT.c  EFX.c  ESCMENU.c  FILE.c  FORM.c  GRAPHIC.c  GRAPHICS_DOS.c  GRAPHICS_SDL.c  GUILDUI.c  HARDFORM.c  HOUSEUI.c  INIFILE.c  INNUI.c  INVENTOR.c  KEYBOARD.c  (+62 more)
src/DOS/: DOSDTALK.c
src/Generic/: NODTALK.c
src/SDL/: WINDTALK.c  ipx_client.cpp  ipx_client.h
src/Win32/: WINDTALK.c  ipx_client.cpp
src/platform/: deserialization.c
